Mejorar Estilo Pantallas-SebastianVillacis

--- a/FrontEnd/src/pages/recetas/recetas.scss
+++ b/FrontEnd/src/pages/recetas/recetas.scss
@@ -7,5 +7,17 @@ page-recetas {
         height: 200px;
         width: 100%;
     }
+    h3{
+        
+        color: #F60543;
+        
+        font-style: italic;
+        
+    }
+    h5{
+        font-weight: bold;
+        font-style: italic;
+    }
+    
     
 }
