--- a/FrontEnd/src/pages/receta-dettale/receta-dettale.scss
+++ b/FrontEnd/src/pages/receta-dettale/receta-dettale.scss
@@ -1,3 +1,55 @@
 page-receta-dettale {
-
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        height: 50%;
+      }
+      h1{
+        color: #F60543;
+        text-decoration: underline;
+        font-style: italic;
+      }
+      h2{
+        font-style: bold;
+        color: #F60543;
+      }
+      ul {
+        list-style-type: none; /* no default bullets */
+      }
+      
+      li { 
+        font-family: Arial;
+        font-size: 18px;
+      }
+      
+      li:before { /* the custom styled bullets */
+        background-color: #F60543;
+        border-radius: 50%;
+        content: "";
+        display: inline-block;
+        margin-right: 10px;
+        margin-bottom: 2px;
+        height: 10px;
+        width: 10px;
+      }
+      hr.new1{
+        border-top: 1px dashed #F60543;
+      }
+      #voz{
+          margin-left: 100px;
+        height: 100px;
+        width: 100px;
+       
+      }
+      #chrono{
+        margin-left: 50px;
+        height: 100px;
+        width: 100px;
+      }
+      button{
+        background-color: white;
+      }
+      
 }
