--- a/FrontEnd/src/pages/competencia/competencia.scss
+++ b/FrontEnd/src/pages/competencia/competencia.scss
@@ -1,3 +1,64 @@
 page-competencia {
-
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        min-height: 200px;
+      min-width: 200px;
+      }
+      h1{
+        color: #F60543;
+        text-decoration: underline;
+        font-style: italic;
+      }
+      ion-card{
+        height: auto;
+      }
+      h2{
+        font-style: bold;
+        color: #F60543;
+      }
+      ul {
+        list-style-type: none; /* no default bullets */
+      }
+      .pasos{
+        font-family: Arial;
+        font-size: 14px;
+      }
+      li { 
+        font-family: Arial;
+        font-size: 18px;
+      }
+      button{
+        font-family: Arial;
+        font-size: 18px;
+        color: #F60543;
+      }
+      li:before { /* the custom styled bullets */
+        background-color: #F60543;
+        border-radius: 50%;
+        content: "";
+        display: inline-block;
+        margin-right: 10px;
+        margin-bottom: 2px;
+        height: 10px;
+        width: 10px;
+      }
+      hr.new1{
+        border-top: 1px dashed #F60543;
+      }
+      #voz{
+          margin-left: 100px;
+        height: 100px;
+        width: 100px;
+       
+      }
+      #chrono{
+        margin-left: 50px;
+        height: 100px;
+        width: 100px;
+      }
+      button{
+        background-color: white;
+      }
 }
