--- a/FrontEnd/src/pages/recetas/recetas.scss
+++ b/FrontEnd/src/pages/recetas/recetas.scss
@@ -1,12 +1,16 @@
 page-recetas {
   .image-container {
-      min-height: 200px;
-      min-width: 200px;
-      background-size: cover;
+      //min-height: 500px;
+      //min-width: 500px;
+        height: 100%;
+        max-height: 25%;
+        width: auto;
+        background-size: cover;
   }
   img{
-    width: 100%;
-    height: 200px;
+    height: 100%;
+    max-height: 25%;
+    width: auto;
   }
   h3{
       
