--- a/FrontEnd/src/pages/recetas/recetas.scss
+++ b/FrontEnd/src/pages/recetas/recetas.scss
@@ -2,13 +2,15 @@ page-recetas {
   .image-container {
       //min-height: 500px;
       //min-width: 500px;
-        height: 100%;
-        max-height: 25%;
+        //height: 100%;
+        min-height: 25%;
         width: auto;
         background-size: cover;
+       
+        
   }
   img{
-    height: 100%;
+    //height: 100%;
     max-height: 25%;
     width: auto;
   }
