--- a/FrontEnd/src/pages/competencia/competencia.scss
+++ b/FrontEnd/src/pages/competencia/competencia.scss
@@ -61,4 +61,8 @@ page-competencia {
       button{
         background-color: white;
       }
+      img{
+        height: 200px;
+            width: 100%;
+      }
 }
