--- a/FrontEnd/src/pages/receta-dettale/receta-dettale.scss
+++ b/FrontEnd/src/pages/receta-dettale/receta-dettale.scss
@@ -51,5 +51,8 @@ page-receta-dettale {
       button{
         background-color: white;
       }
-      
+      img{
+        height: 150px;
+            width: 100%;
+      }
 }
