--- a/FrontEnd/src/pages/recetas/recetas.scss
+++ b/FrontEnd/src/pages/recetas/recetas.scss
@@ -1,18 +1,13 @@
 page-recetas {
   .image-container {
-      //min-height: 500px;
-      //min-width: 500px;
-        //height: 100%;
-        min-height: 25%;
-        width: auto;
-        background-size: cover;
+    min-height: 200px;
+    background-size: cover;
        
         
   }
   img{
-    //height: 100%;
-    max-height: 25%;
-    width: auto;
+    height: 200px;
+        width: 100%;
   }
   h3{
       
